# Numerical-Integration

./: BUILDING.md  CMakeLists.txt  Numerical_Integration.cpp  README.md
.github/workflows/: build.yaml
include/: function.h  input.cpp  input.h  integrator.h  utils.h
include/methods/: boole.h  romberg.h  simpson13.h  simpson38.h  trapezoidal.h
src/: function.cpp  integrator.cpp  main.cpp  utils.cpp
src/methods/: boole.cpp  romberg.cpp  simpson13.cpp  simpson38.cpp  trapezoidal.cpp
